python/rregadmin/registry/hive_info_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.hive.types_wrapper -m rregadmin.registry.types_wrapper -r ^HTYPE_.* -r ^hive_info_.* -r ^guess_hive_type$ -r ^HiveType$ -o hive_info_wrapper.py hive_info_wrapper.xml'
from ctypes import *

from rregadmin.registry.types_wrapper import hive_info
STRING = c_char_p
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.util.ustring_list_wrapper import gboolean
from rregadmin.hive.types_wrapper import Hive
from rregadmin.registry.types_wrapper import hive_id
from rregadmin.registry.types_wrapper import hive_info_


HTYPE_ERROR = -2
HTYPE_UNLOADED = -1
HTYPE_DEFAULT = 8
HTYPE_SYSTEM = 2
HTYPE_USER = 5
HTYPE_SOFTWARE = 4
HTYPE_SECURITY = 3
HTYPE_SAM = 1
HTYPE_UNKNOWN = 0
HTYPE_USRCLASS = 7
HTYPE_USERDIFF = 6

# values for enumeration 'HiveType'
HiveType = c_int # enum
# ../../../rregadmin/registry/hive_info.h 121
hive_info_new = _libraries['librregadmin.so.1'].hive_info_new
hive_info_new.restype = POINTER(hive_info)
# hive_info_new(hive_filename)
hive_info_new.argtypes = [STRING]
hive_info_new.__doc__ = \
"""hive_info * hive_info_new(unknown * hive_filename)
../../../rregadmin/registry/hive_info.h:121"""
# ../../../rregadmin/registry/hive_info.h 127
hive_info_free = _libraries['librregadmin.so.1'].hive_info_free
hive_info_free.restype = gboolean
# hive_info_free(in_hi)
hive_info_free.argtypes = [POINTER(hive_info)]
hive_info_free.__doc__ = \
"""gboolean hive_info_free(hive_info * in_hi)
../../../rregadmin/registry/hive_info.h:127"""
# ../../../rregadmin/registry/hive_info.h 133
hive_info_flush = _libraries['librregadmin.so.1'].hive_info_flush
hive_info_flush.restype = gboolean
# hive_info_flush(in_hi, in_do_backup)
hive_info_flush.argtypes = [POINTER(hive_info), gboolean]
hive_info_flush.__doc__ = \
"""gboolean hive_info_flush(hive_info * in_hi, gboolean in_do_backup)
../../../rregadmin/registry/hive_info.h:133"""
# ../../../rregadmin/registry/hive_info.h 139
hive_info_unload = _libraries['librregadmin.so.1'].hive_info_unload
hive_info_unload.restype = gboolean
# hive_info_unload(in_hi, in_do_backup)
hive_info_unload.argtypes = [POINTER(hive_info), gboolean]
hive_info_unload.__doc__ = \
"""gboolean hive_info_unload(hive_info * in_hi, gboolean in_do_backup)
../../../rregadmin/registry/hive_info.h:139"""
# ../../../rregadmin/registry/hive_info.h 145
hive_info_is_valid = _libraries['librregadmin.so.1'].hive_info_is_valid
hive_info_is_valid.restype = gboolean
# hive_info_is_valid(in_hi)
hive_info_is_valid.argtypes = [POINTER(hive_info)]
hive_info_is_valid.__doc__ = \
"""gboolean hive_info_is_valid(hive_info * in_hi)
../../../rregadmin/registry/hive_info.h:145"""
# ../../../rregadmin/registry/hive_info.h 151
hive_info_is_dirty = _libraries['librregadmin.so.1'].hive_info_is_dirty
hive_info_is_dirty.restype = gboolean
# hive_info_is_dirty(in_hi)
hive_info_is_dirty.argtypes = [POINTER(hive_info)]
hive_info_is_dirty.__doc__ = \
"""gboolean hive_info_is_dirty(unknown * in_hi)
../../../rregadmin/registry/hive_info.h:151"""
# ../../../rregadmin/registry/hive_info.h 157
hive_info_get_hive = _libraries['librregadmin.so.1'].hive_info_get_hive
hive_info_get_hive.restype = POINTER(Hive)
# hive_info_get_hive(in_hi)
hive_info_get_hive.argtypes = [POINTER(hive_info)]
hive_info_get_hive.__doc__ = \
"""Hive * hive_info_get_hive(unknown * in_hi)
../../../rregadmin/registry/hive_info.h:157"""
# ../../../rregadmin/registry/hive_info.h 163
hive_info_get_filename = _libraries['librregadmin.so.1'].hive_info_get_filename
hive_info_get_filename.restype = STRING
# hive_info_get_filename(in_hi)
hive_info_get_filename.argtypes = [POINTER(hive_info)]
hive_info_get_filename.__doc__ = \
"""unknown * hive_info_get_filename(unknown * in_hi)
../../../rregadmin/registry/hive_info.h:163"""
# ../../../rregadmin/registry/hive_info.h 169
hive_info_get_type = _libraries['librregadmin.so.1'].hive_info_get_type
hive_info_get_type.restype = HiveType
# hive_info_get_type(in_hi)
hive_info_get_type.argtypes = [POINTER(hive_info)]
hive_info_get_type.__doc__ = \
"""HiveType hive_info_get_type(unknown * in_hi)
../../../rregadmin/registry/hive_info.h:169"""
# ../../../rregadmin/registry/hive_info.h 175
hive_info_get_id = _libraries['librregadmin.so.1'].hive_info_get_id
hive_info_get_id.restype = hive_id
# hive_info_get_id(in_hi)
hive_info_get_id.argtypes = [POINTER(hive_info)]
hive_info_get_id.__doc__ = \
"""hive_id hive_info_get_id(unknown * in_hi)
../../../rregadmin/registry/hive_info.h:175"""
# ../../../rregadmin/registry/hive_info.h 181
hive_info_set_id = _libraries['librregadmin.so.1'].hive_info_set_id
hive_info_set_id.restype = None
# hive_info_set_id(in_hi, in_id)
hive_info_set_id.argtypes = [POINTER(hive_info), hive_id]
hive_info_set_id.__doc__ = \
"""void hive_info_set_id(hive_info * in_hi, hive_id in_id)
../../../rregadmin/registry/hive_info.h:181"""
# ../../../rregadmin/registry/hive_info.h 189
guess_hive_type = _libraries['librregadmin.so.1'].guess_hive_type
guess_hive_type.restype = HiveType
# guess_hive_type(hdesc)
guess_hive_type.argtypes = [POINTER(Hive)]
guess_hive_type.__doc__ = \
"""HiveType guess_hive_type(Hive * hdesc)
../../../rregadmin/registry/hive_info.h:189"""
__all__ = ['guess_hive_type', 'hive_info_get_filename',
           'HTYPE_UNLOADED', 'hive_info_unload', 'hive_info_get_id',
           'HiveType', 'hive_info_is_dirty', 'HTYPE_SOFTWARE',
           'HTYPE_DEFAULT', 'HTYPE_SAM', 'HTYPE_ERROR',
           'HTYPE_USRCLASS', 'hive_info_flush', 'HTYPE_SYSTEM',
           'HTYPE_USER', 'hive_info_get_type', 'hive_info_new',
           'hive_info_set_id', 'hive_info_is_valid', 'HTYPE_USERDIFF',
           'HTYPE_UNKNOWN', 'hive_info_get_hive', 'hive_info_free',
           'HTYPE_SECURITY']
